flutter_sfu_relay/windows/librelay.h

// RelayRoomAddICECandidate 添加 ICE 候选
//
extern __declspec(dllexport) int RelayRoomAddICECandidate(char* roomID, char* peerID, char* candidateJSON);
// RelayRoomTriggerRenegotiation 触发重协商
// 为所有已连接的订阅者生成新的 Offer
// 返回 JSON: {"peerID1": "offer1", "peerID2": "offer2", ...}
//
extern __declspec(dllexport) char* RelayRoomTriggerRenegotiation(char* roomID);
// RelayRoomCreateOffer 为指定订阅者创建 Offer
//
extern __declspec(dllexport) char* RelayRoomCreateOffer(char* roomID, char* peerID);
// RelayRoomHandleAnswer 处理订阅者的 Answer（重协商响应）
//
extern __declspec(dllexport) int RelayRoomHandleAnswer(char* roomID, char* peerID, char* answerSDP);
// RelayRoomGetStatus 获取房间状态
//
extern __declspec(dllexport) char* RelayRoomGetStatus(char* roomID);
// RelayRoomInjectSFU 注入 SFU RTP 包（通过 RelayRoom）
//
extern __declspec(dllexport) int RelayRoomInjectSFU(char* roomID, int isVideo, void* data, int dataLen);
// RelayRoomInjectLocal 注入本地分享 RTP 包（通过 RelayRoom）
//
extern __declspec(dllexport) int RelayRoomInjectLocal(char* roomID, int isVideo, void* data, int dataLen);
// RelayRoomHandleLocalPublisherOffer 处理本地 Loopback P2P 连接 Offer
//
extern __declspec(dllexport) char* RelayRoomHandleLocalPublisherOffer(char* roomID, char* offerSDP);
// RelayRoomStartLocalShare 开始本地分享
//
extern __declspec(dllexport) int RelayRoomStartLocalShare(char* roomID, char* sharerID);
// RelayRoomStopLocalShare 停止本地分享
//
extern __declspec(dllexport) int RelayRoomStopLocalShare(char* roomID);
// BufferPoolGetStats 获取全局缓冲池统计
//
extern __declspec(dllexport) char* BufferPoolGetStats(void);
// BufferPoolResetStats 重置缓冲池统计
//
extern __declspec(dllexport) void BufferPoolResetStats(void);
// StatsCreate 创建房间统计
//
extern __declspec(dllexport) int StatsCreate(char* roomID);
// StatsDestroy 销毁房间统计
//
extern __declspec(dllexport) int StatsDestroy(char* roomID);
// StatsAddBytesIn 添加接收字节数
//
extern __declspec(dllexport) int StatsAddBytesIn(char* roomID, char* peerID, uint64_t bytes);
// StatsAddBytesOut 添加发送字节数
//
extern __declspec(dllexport) int StatsAddBytesOut(char* roomID, char* peerID, uint64_t bytes);
// StatsAddPacketLost 添加丢包数
//
extern __declspec(dllexport) int StatsAddPacketLost(char* roomID);
// StatsCalculateBitrate 计算码率（每秒调用一次）
//
extern __declspec(dllexport) int StatsCalculateBitrate(char* roomID);
// StatsGetSnapshot 获取统计快照
//
extern __declspec(dllexport) char* StatsGetSnapshot(char* roomID);
// StatsGetTraffic 获取总体流量统计
//
extern __declspec(dllexport) char* StatsGetTraffic(char* roomID);
// StatsGetBitrateIn 获取入站码率 (bps)
//
extern __declspec(dllexport) double StatsGetBitrateIn(char* roomID);
// StatsGetBitrateOut 获取出站码率 (bps)
//
extern __declspec(dllexport) double StatsGetBitrateOut(char* roomID);
// StatsGetLossRate 获取丢包率
//
extern __declspec(dllexport) double StatsGetLossRate(char* roomID);