flutter_sfu_relay/lib/flutter_sfu_relay_bindings_generated.dart


  /// RelayRoomAddICECandidate 添加 ICE 候选
  int RelayRoomAddICECandidate(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
    ffi.Pointer<ffi.Char> candidateJSON,
  ) {
    return _RelayRoomAddICECandidate(roomID, peerID, candidateJSON);
  }

  late final _RelayRoomAddICECandidatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('RelayRoomAddICECandidate');
  late final _RelayRoomAddICECandidate =
      _RelayRoomAddICECandidatePtr.asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// RelayRoomTriggerRenegotiation 触发重协商
  /// 为所有已连接的订阅者生成新的 Offer
  /// 返回 JSON: {"peerID1": "offer1", "peerID2": "offer2", ...}
  ffi.Pointer<ffi.Char> RelayRoomTriggerRenegotiation(
    ffi.Pointer<ffi.Char> roomID,
  ) {
    return _RelayRoomTriggerRenegotiation(roomID);
  }

  late final _RelayRoomTriggerRenegotiationPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
        >
      >('RelayRoomTriggerRenegotiation');
  late final _RelayRoomTriggerRenegotiation =
      _RelayRoomTriggerRenegotiationPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
      >();

  /// RelayRoomCreateOffer 为指定订阅者创建 Offer
  ffi.Pointer<ffi.Char> RelayRoomCreateOffer(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
  ) {
    return _RelayRoomCreateOffer(roomID, peerID);
  }

  late final _RelayRoomCreateOfferPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('RelayRoomCreateOffer');
  late final _RelayRoomCreateOffer =
      _RelayRoomCreateOfferPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// RelayRoomHandleAnswer 处理订阅者的 Answer（重协商响应）
  int RelayRoomHandleAnswer(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
    ffi.Pointer<ffi.Char> answerSDP,
  ) {
    return _RelayRoomHandleAnswer(roomID, peerID, answerSDP);
  }

  late final _RelayRoomHandleAnswerPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('RelayRoomHandleAnswer');
  late final _RelayRoomHandleAnswer =
      _RelayRoomHandleAnswerPtr.asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// RelayRoomGetStatus 获取房间状态
  ffi.Pointer<ffi.Char> RelayRoomGetStatus(ffi.Pointer<ffi.Char> roomID) {
    return _RelayRoomGetStatus(roomID);
  }

  late final _RelayRoomGetStatusPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
        >
      >('RelayRoomGetStatus');
  late final _RelayRoomGetStatus =
      _RelayRoomGetStatusPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
      >();

  /// RelayRoomInjectSFU 注入 SFU RTP 包（通过 RelayRoom）
  int RelayRoomInjectSFU(
    ffi.Pointer<ffi.Char> roomID,
    int isVideo,
    ffi.Pointer<ffi.Void> data,
    int dataLen,
  ) {
    return _RelayRoomInjectSFU(roomID, isVideo, data, dataLen);
  }

  late final _RelayRoomInjectSFUPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Pointer<ffi.Void>,
            ffi.Int,
          )
        >
      >('RelayRoomInjectSFU');
  late final _RelayRoomInjectSFU =
      _RelayRoomInjectSFUPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Void>, int)
      >();

  /// RelayRoomInjectLocal 注入本地分享 RTP 包（通过 RelayRoom）
  int RelayRoomInjectLocal(
    ffi.Pointer<ffi.Char> roomID,
    int isVideo,
    ffi.Pointer<ffi.Void> data,
    int dataLen,
  ) {
    return _RelayRoomInjectLocal(roomID, isVideo, data, dataLen);
  }

  late final _RelayRoomInjectLocalPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Pointer<ffi.Void>,
            ffi.Int,
          )
        >
      >('RelayRoomInjectLocal');
  late final _RelayRoomInjectLocal =
      _RelayRoomInjectLocalPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Void>, int)
      >();

  /// RelayRoomStartLocalShare 开始本地分享
  int RelayRoomStartLocalShare(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> sharerID,
  ) {
    return _RelayRoomStartLocalShare(roomID, sharerID);
  }

  late final _RelayRoomStartLocalSharePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('RelayRoomStartLocalShare');
  late final _RelayRoomStartLocalShare =
      _RelayRoomStartLocalSharePtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  /// RelayRoomStopLocalShare 停止本地分享
  int RelayRoomStopLocalShare(ffi.Pointer<ffi.Char> roomID) {
    return _RelayRoomStopLocalShare(roomID);
  }

  late final _RelayRoomStopLocalSharePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'RelayRoomStopLocalShare',
      );
  late final _RelayRoomStopLocalShare =
      _RelayRoomStopLocalSharePtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>)
      >();

  /// RelayRoomHandleLocalPublisherOffer 处理本地 Loopback P2P 连接 Offer
  ffi.Pointer<ffi.Char> RelayRoomHandleLocalPublisherOffer(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> offerSDP,
  ) {
    return _RelayRoomHandleLocalPublisherOffer(roomID, offerSDP);
  }

  late final _RelayRoomHandleLocalPublisherOfferPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('RelayRoomHandleLocalPublisherOffer');
  late final _RelayRoomHandleLocalPublisherOffer =
      _RelayRoomHandleLocalPublisherOfferPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// BufferPoolGetStats 获取全局缓冲池统计
  ffi.Pointer<ffi.Char> BufferPoolGetStats() {
    return _BufferPoolGetStats();
  }

  late final _BufferPoolGetStatsPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'BufferPoolGetStats',
      );
  late final _BufferPoolGetStats =
      _BufferPoolGetStatsPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// BufferPoolResetStats 重置缓冲池统计
  void BufferPoolResetStats() {
    return _BufferPoolResetStats();
  }

  late final _BufferPoolResetStatsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('BufferPoolResetStats');
  late final _BufferPoolResetStats =
      _BufferPoolResetStatsPtr.asFunction<void Function()>();

  /// StatsCreate 创建房间统计
  int StatsCreate(ffi.Pointer<ffi.Char> roomID) {
    return _StatsCreate(roomID);
  }

  late final _StatsCreatePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'StatsCreate',
      );
  late final _StatsCreate =
      _StatsCreatePtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// StatsDestroy 销毁房间统计
  int StatsDestroy(ffi.Pointer<ffi.Char> roomID) {
    return _StatsDestroy(roomID);
  }

  late final _StatsDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'StatsDestroy',
      );
  late final _StatsDestroy =
      _StatsDestroyPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// StatsAddBytesIn 添加接收字节数
  int StatsAddBytesIn(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
    int bytes,
  ) {
    return _StatsAddBytesIn(roomID, peerID, bytes);
  }

  late final _StatsAddBytesInPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Uint64,
          )
        >
      >('StatsAddBytesIn');
  late final _StatsAddBytesIn =
      _StatsAddBytesInPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)
      >();

  /// StatsAddBytesOut 添加发送字节数
  int StatsAddBytesOut(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
    int bytes,
  ) {
    return _StatsAddBytesOut(roomID, peerID, bytes);
  }

  late final _StatsAddBytesOutPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Uint64,
          )
        >
      >('StatsAddBytesOut');
  late final _StatsAddBytesOut =
      _StatsAddBytesOutPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)
      >();

  /// StatsAddPacketLost 添加丢包数
  int StatsAddPacketLost(ffi.Pointer<ffi.Char> roomID) {
    return _StatsAddPacketLost(roomID);
  }

  late final _StatsAddPacketLostPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'StatsAddPacketLost',
      );
  late final _StatsAddPacketLost =
      _StatsAddPacketLostPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// StatsCalculateBitrate 计算码率（每秒调用一次）
  int StatsCalculateBitrate(ffi.Pointer<ffi.Char> roomID) {
    return _StatsCalculateBitrate(roomID);
  }

  late final _StatsCalculateBitratePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'StatsCalculateBitrate',
      );
  late final _StatsCalculateBitrate =
      _StatsCalculateBitratePtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>)
      >();

  /// StatsGetSnapshot 获取统计快照
  ffi.Pointer<ffi.Char> StatsGetSnapshot(ffi.Pointer<ffi.Char> roomID) {
    return _StatsGetSnapshot(roomID);
  }

  late final _StatsGetSnapshotPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
        >
      >('StatsGetSnapshot');
  late final _StatsGetSnapshot =
      _StatsGetSnapshotPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
      >();

  /// StatsGetTraffic 获取总体流量统计
  ffi.Pointer<ffi.Char> StatsGetTraffic(ffi.Pointer<ffi.Char> roomID) {
    return _StatsGetTraffic(roomID);
  }

  late final _StatsGetTrafficPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
        >
      >('StatsGetTraffic');
  late final _StatsGetTraffic =
      _StatsGetTrafficPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
      >();

  /// StatsGetBitrateIn 获取入站码率 (bps)
  double StatsGetBitrateIn(ffi.Pointer<ffi.Char> roomID) {
    return _StatsGetBitrateIn(roomID);
  }

  late final _StatsGetBitrateInPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Pointer<ffi.Char>)>>(
        'StatsGetBitrateIn',
      );
  late final _StatsGetBitrateIn =
      _StatsGetBitrateInPtr.asFunction<
        double Function(ffi.Pointer<ffi.Char>)
      >();

  /// StatsGetBitrateOut 获取出站码率 (bps)
  double StatsGetBitrateOut(ffi.Pointer<ffi.Char> roomID) {
    return _StatsGetBitrateOut(roomID);
  }

  late final _StatsGetBitrateOutPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Pointer<ffi.Char>)>>(
        'StatsGetBitrateOut',
      );
  late final _StatsGetBitrateOut =
      _StatsGetBitrateOutPtr.asFunction<
        double Function(ffi.Pointer<ffi.Char>)
      >();

  /// StatsGetLossRate 获取丢包率
  double StatsGetLossRate(ffi.Pointer<ffi.Char> roomID) {
    return _StatsGetLossRate(roomID);
  }
